# analyticbot

./: .bandit  .bandit.yaml  .coveragerc  .dockerignore  .domain-config  .env  .env.backup  .env.development.example  .env.example  .env.mtproto.example  .env.production.example  .env.security  .flake8  .gitattributes  .gitignore  .mergify.yml  .pre-commit-config.yaml  .tunnel-current  .yamllint  =1.0.3  =4.1.0  ACTUAL_SEPARATION_COMPLETE.md  AI_WORKER_ARCHITECTURE.md  AI_WORKER_IMPLEMENTATION_SUMMARY.md  AI_WORKER_QUICKSTART.md  ANALYTICS_ORCHESTRATOR_REFACTORING_PLAN.md  API-DIRECT-ACCESS.md  API-URL-FIX.md  API_CONNECTION_FIXES_SUMMARY.md  API_DOCUMENTATION.md  API_TESTING_RESULTS.md  APPS_ARCHITECTURE_TOP_10_ISSUES.md  APPS_REFACTORING_ACTION_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_MIGRATION_PLAN.md  ARCHITECTURE_REFACTORING_PROGRESS.md  AUDIT_COMPLETION_REPORT.md  AUDIT_EXECUTIVE_SUMMARY.md  AUTO_MTPROTO_COLLECTION_GUIDE.md  BACKEND_CRASH_FIX.md  (+308 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  ci.compose.override.yml  dependabot.yml  labels.yml  pull_request_template.md
advanced_analytics/: __init__.py  ai_insights.py  dashboard.py  data_processor.py  predictive_engine.py  reporting_system.py
alembic/: env.py
analytics/: __init__.py  dashboard.py  data_processor.py  reporting_system.py
apis/: __init__.py  ai_ml_api.py  analytics_api.py  analytics_demo_api.py  api_alt_port.py  main_api.py  performance_api.py  security_api.py  standalone_ai_api.py  standalone_performance_api.py
apps/: pytest.ini
archive/: Dockerfile-old  ai_ml_api.py  analytics_demo_api.py  api.py  api_alt_port.py  legacy_analytics_router_719_lines.py  legacy_bot_analytics_handler_714_lines.py  legacy_core_di_container.py  legacy_core_di_container_final.py  legacy_infra_celery_tasks.py  main.py  performance_api.py  security_api.py  standalone_performance_api.py
backups/: plans_data.sql  users_data.sql
bot/: __init__.py  analytics.py  bot.py  celery_app.py  config.py  container.py  optimized_container.py  tasks.py  test_config.py
config/: __init__.py  analyticbot.cloudflare.conf.new  demo_mode_config.py  feature_flags.md  importlinter.ini  nginx.conf  production_deployment_pipeline.yml  settings.py
core/: __init__.py  di_container.py  protocols.py
data/: analyticbot_dev_session.session  analyticbot_session.session  requirements.installed.txt
docker/: Dockerfile  docker-compose.mtproto.yml  docker-compose.prod.yml  docker-compose.proxy.yml  docker-compose.yml  nginx.conf
docs/: ADMIN_MTPROTO_POOL_CONFIG.md  ADMIN_PANEL_IMPROVEMENT_PLAN.md  ADMIN_RATE_LIMITS_AUDIT.md  ADMIN_RATE_LIMITS_GUIDE.md  ADVANCED_HOOK_PATTERNS_COMPLETE.md  AI_BACKEND_IMPLEMENTATION_PLAN.md  AI_BACKEND_PHASE_1_2_COMPLETE.md  AI_FEATURES_FIX.md  AI_MULTI_PROVIDER_ARCHITECTURE.md  AI_MULTI_PROVIDER_QUICKSTART.md  AI_PROVIDERS_FRONTEND.md  AI_PROVIDERS_QUICK_START.md  AI_SYSTEM_AUDIT_REPORT.md  AI_SYSTEM_USER_ARCHITECTURE.md  ALEMBIC_MIGRATION_SYSTEM_AUDIT.md  ANALYSIS_PERIOD_TESTING.md  ANALYTICS_ORCHESTRATOR_REFACTORING_PLAN.md  API-DIRECT-ACCESS.md  API-URL-FIX.md  API_DATA_SOURCE_FIX.md  API_DOCUMENTATION_UPDATED.md  API_ENDPOINT_CHAOS_AUDIT_AND_CLEANUP_PLAN.md  API_HEALTH_CHECK_IMPROVEMENTS.md  API_PATH_MIGRATION_GUIDE.md  API_RESTRUCTURE_PHASE_0_PREPARATION.md  API_ROUTER_SERVICE_LAYER_AUDIT.md  ARCHITECTURE_ANALYSIS_REPORT.md  ARCHITECTURE_LAYERS_AUDIT.md  AUTO_FIX.md  BACKEND_API_ENDPOINT_USAGE_AUDIT.md  BACKEND_API_ENDPOINT_USAGE_AUDIT_FRESH.md  BACKEND_FIX_SUMMARY.txt  BASE_COMPONENTS_GUIDE.md  BOT_SYSTEM_ACTUAL_STATUS_REPORT.md  BOT_SYSTEM_AUDIT_REPORT.md  CHANGELOG.md  CHANGELOG_PHASE_0.0.md  CIRCUIT_BREAKER_IMPLEMENTATION.md  CI_LABELS.md  CLEAN_ARCHITECTURE.md  (+296 more)
examples/: demo_unified_analytics.py
infra/: CLEANUP_SUMMARY.md  INFRA_AUDIT_REPORT.md  K8S_DEPLOYMENT_GUIDE.md  MIGRATION_PLAN.md  RECOMMENDED_STRUCTURE.md  __init__.py  deploy-k8s.sh
infrastructure/: DUPLICATION_ANALYSIS.md  __init__.py
postgres-init/: init.sql
reports/: API_RESTRUCTURE_FINAL_SUMMARY.txt  FRONTEND_API_UPDATES.txt  MTPROTO_AUTO_CONNECT_FEATURE.md  MTPROTO_PORT_AND_PROCESS_MANAGEMENT.md  OPTION_A_COMPLIANCE_COMPLETE.txt  PHASE_0_RESULTS_SUMMARY.md  PHASE_1_COMPLETE.md  files_with_api_calls.txt  openapi_current.json  phase0_current_structure.txt  phase0_endpoint_usage.txt  phase0_frontend_api_calls.txt  phase0_frontend_endpoints.txt  phase0_issues.txt  phase0_migration_map.json  phase0_migration_map.txt
results/: infrastructure_test_results.json  module2_local_test_results_20250822_100219.json  module2_local_test_results_20250822_100531.json  module3_test_results_20250822_113852.json  module3_test_results_20250822_113932.json  performance_benchmark_results.json  pure_api_test_results_20250818_061520.json
scripts/: README.md  activate_dev.sh  ai_fix.py  ai_fix_enhanced.py  ai_fix_updated.py  ai_index.py  analyze-layers.sh  analyze_migration_dependencies.py  analyze_src_structure.py  api-watchdog.sh  apply_migration_0037.sh  apply_performance_fixes.sh  audit_module_dependencies.py  audit_shared_kernel_extraction.py  batch_collect_abc.py  build-optimized.sh  cache_optimization_indexes.sql  check-env.sh  check_coverage.py  check_duplicates.sh  check_existing_bots.py  check_mtproto_config.py  check_mtproto_data.py  clean_project.sh  cleanup_duplicates.py  cleanup_duplicates_db_only.sql  cleanup_github_actions.sh  cleanup_orphaned_processes.sh  codemod_update_imports.py  collect_abc_legacy_news.py  collect_all_abc_posts.py  collect_real_data.py  collect_real_data_safe.py  complete_migration.py  complete_module_monolith.py  comprehensive_cleanup.py  comprehensive_twa_test.sh  corrected_migration_plan.py  coverage_report.sh  database_performance_optimization.py  (+151 more)
security/: __init__.py  auth.py  config.py  mfa.py  models.py  oauth.py  rbac.py
src/: __init__.py  cache.py  config.py
test_models/: test_engagement_model.pth  test_engagement_model.pth.meta.json
tests/: __init__.py  conftest.py  frontend_api_integration_test.js  quick_payment_test.py  simple_conftest.py  test_admin_api_integration.py  test_ai_integration.py  (+52 more)
(+4609 files in other folders)
