[project]
name = "analyticbot"
version = "2.0.0"
description = "Telegram Channel & Group Analytics — one-time analysis, PDF reports, web dashboard"
requires-python = ">=3.11"

dependencies = [
    # Telegram
    "aiogram>=3.20",
    "telethon>=1.41",

    # Web API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",

    # Database
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",

    # Analytics & Visualization
    "numpy>=1.26",
    "scipy>=1.14",
    "pandas>=2.2",
    "plotly>=5.24",
    "matplotlib>=3.9",

    # Reports
    "reportlab>=4.2",
    "jinja2>=3.1",

    # Utils
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "aiohttp>=3.11",
    "redis>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
